Massive overhaul: fix list-to-device bug for inference, add streaming examples, rerun all nbs with newest dependency version, cleanups

--- a/nbs/01_text_augmentation.ipynb
+++ b/nbs/01_text_augmentation.ipynb
@@ -147,9 +147,9 @@
       "hội cư dân chung cư sen hồng - chung cư lotus sóng thần thủ đức\n",
       "hội cư dân chung cư sen hồng - chung cư lotus sóng thần thủ đức\n",
       "hội cư dân chung cư sen hồng - chung cư lotus sóng thần thủ đức\n",
-      "hoi cu dan chung cu sen hong - chung cu lotus song than thu duc\n",
-      "hoi cu dan chung cu sen hong - chung cu lotus song than thu duc\n",
       "hội cư dân chung cư sen hồng - chung cư lotus sóng thần thủ đức\n",
+      "hoi cu dan chung cu sen hong - chung cu lotus song than thu duc\n",
+      "hoi cu dan chung cu sen hong - chung cu lotus song than thu duc\n",
       "hoi cu dan chung cu sen hong - chung cu lotus song than thu duc\n"
      ]
     }
@@ -262,7 +262,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at vinai/phobert-base were not used when initializing RobertaForMaskedLM: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
+      "/home/quan/anaconda3/envs/nlp_dev/lib/python3.10/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n",
+      "Some weights of the model checkpoint at vinai/phobert-base were not used when initializing RobertaForMaskedLM: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
       "- This IS expected if you are initializing RobertaForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing RobertaForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -309,8 +311,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 751 ms, sys: 17 ms, total: 768 ms\n",
-      "Wall time: 77.2 ms\n"
+      "CPU times: user 1.11 s, sys: 46.8 ms, total: 1.16 s\n",
+      "Wall time: 102 ms\n"
      ]
     },
     {
