--- a/nbs/03_model_lm_main.ipynb
+++ b/nbs/03_model_lm_main.ipynb
@@ -160,6 +160,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/quan/anaconda3/envs/nlp_dev/lib/python3.10/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -430,7 +438,7 @@
     "                seed=None, # Random seed\n",
     "                report_to='none', # The list of integrations to report the results and logs to. Supported platforms are \"azure_ml\", \"comet_ml\", \"mlflow\", \"neptune\", \"tensorboard\",\"clearml\" and \"wandb\". Use \"all\" to report to all integrations installed, \"none\" for no integrations.\n",
     "                trainer_class=None, # You can include the class name of your custom trainer here\n",
-    "                len_train=None, # length of training steps (for streaming dataset)\n",
+    "                len_train=None, # estimated number of samples in the whole training set (for streaming dataset only)\n",
     "            ):\n",
     "    \"The main model training/finetuning function\"\n",
     "    torch.cuda.empty_cache()\n",
@@ -454,7 +462,7 @@
     "                                      per_device_train_batch_size=bs, \n",
     "                                      per_device_eval_batch_size=val_bs,\n",
     "                                      num_train_epochs=epochs,\n",
-    "                                      max_steps=epochs*(len_train//bs) if len_train else -1,\n",
+    "                                      max_steps=epochs*((len_train//bs)//grad_accum_steps) if len_train else -1,\n",
     "                                      weight_decay=wd,\n",
     "                                      report_to=report_to,\n",
     "                                      logging_dir=os.path.join(o_dir, 'log') if report_to!='none' else None,\n",
@@ -524,7 +532,7 @@
        "| seed | NoneType | None | Random seed |\n",
        "| report_to | str | none | The list of integrations to report the results and logs to. Supported platforms are \"azure_ml\", \"comet_ml\", \"mlflow\", \"neptune\", \"tensorboard\",\"clearml\" and \"wandb\". Use \"all\" to report to all integrations installed, \"none\" for no integrations. |\n",
        "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |\n",
-       "| len_train | NoneType | None | length of training steps (for streaming dataset) |"
+       "| len_train | NoneType | None | estimated number of samples in the whole training set (for streaming dataset only) |"
       ],
       "text/plain": [
        "---\n",
@@ -564,7 +572,7 @@
        "| seed | NoneType | None | Random seed |\n",
        "| report_to | str | none | The list of integrations to report the results and logs to. Supported platforms are \"azure_ml\", \"comet_ml\", \"mlflow\", \"neptune\", \"tensorboard\",\"clearml\" and \"wandb\". Use \"all\" to report to all integrations installed, \"none\" for no integrations. |\n",
        "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |\n",
-       "| len_train | NoneType | None | length of training steps (for streaming dataset) |"
+       "| len_train | NoneType | None | estimated number of samples in the whole training set (for streaming dataset only) |"
       ]
      },
      "execution_count": null,
@@ -594,7 +602,7 @@
     "                          ):\n",
     "    state_idx = val2iterable(state_idx)\n",
     "    \n",
-    "    if data_collator is not None:    \n",
+    "    if 'input_ids' in batch and isinstance(batch['input_ids'],list):\n",
     "# --- Convert from  \n",
     "# {'input_ids': [tensor([    0, 10444,   244, 14585,   125,  2948,  5925,   368,     2]), \n",
     "#                tensor([    0, 16098,  2913,   244,   135,   198, 34629,  6356,     2])]\n",
@@ -606,6 +614,8 @@
     "#   'attention_mask': tensor([1, 1, 1, 1, 1, 1, 1, 1, 1])},\n",
     "#  {'input_ids': tensor([    0, 16098,  2913,   244,   135,   198, 34629,  6356,     2]),\n",
     "#   'attention_mask': tensor([1, 1, 1, 1, 1, 1, 1, 1, 1])}]\n",
+    "# --- so that you can apply data_collator to add padding\n",
+    "\n",
     "\n",
     "        # remove string text, due to transformer new version       \n",
     "        collator_inp = []\n",
@@ -672,7 +682,7 @@
     "            data_collator=None, # Data Collator (to override one in ```data_store```)\n",
     "            is_mlm=None, # Whether this is masked LM or casual LM\n",
     "            trainer_class=None, # You can include the class name of your custom trainer here\n",
-    "            len_train=None, # length of training steps (for streaming dataset)\n",
+    "            len_train=None, # estimated number of samples in the whole training set (for streaming dataset only)\n",
     "           ):\n",
     "        \n",
     "        if tokenizer is None: tokenizer=check_and_get_attribute(self.data_store,'tokenizer')\n",
@@ -756,7 +766,7 @@
     "        tokenizer=check_and_get_attribute(self.data_store,'tokenizer')\n",
     "        main_text=check_and_get_attribute(self.data_store,'main_text')\n",
     "        _task = 'fill-mask' if is_mlm else 'text-generation'\n",
-    "        pipeline_obj = pipeline(_task,model=self.model,tokenizer=tokenizer,device=self.model.device)\n",
+    "        pipeline_obj = pipeline(task=_task,model=self.model,tokenizer=tokenizer,device=self.model.device)\n",
     "        str_list = dset[main_text]\n",
     "        if _task=='fill-mask':\n",
     "            all_tfms = self.data_store.content_tfms \n",
@@ -841,7 +851,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L203){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L208){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelLMController\n",
        "\n",
@@ -858,7 +868,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L203){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L208){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelLMController\n",
        "\n",
@@ -892,7 +902,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L213){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L218){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelLMController.fit\n",
        "\n",
@@ -924,12 +934,12 @@
        "| data_collator | NoneType | None | Data Collator (to override one in ```data_store```) |\n",
        "| is_mlm | NoneType | None | Whether this is masked LM or casual LM |\n",
        "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |\n",
-       "| len_train | NoneType | None | length of training steps (for streaming dataset) |"
+       "| len_train | NoneType | None | estimated number of samples in the whole training set (for streaming dataset only) |"
       ],
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L213){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L218){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelLMController.fit\n",
        "\n",
@@ -961,7 +971,7 @@
        "| data_collator | NoneType | None | Data Collator (to override one in ```data_store```) |\n",
        "| is_mlm | NoneType | None | Whether this is masked LM or casual LM |\n",
        "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |\n",
-       "| len_train | NoneType | None | length of training steps (for streaming dataset) |"
+       "| len_train | NoneType | None | estimated number of samples in the whole training set (for streaming dataset only) |"
       ]
      },
      "execution_count": null,
@@ -983,7 +993,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L280){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L288){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelLMController.predict_raw_text\n",
        "\n",
@@ -999,7 +1009,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L280){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L288){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelLMController.predict_raw_text\n",
        "\n",
