--- a/nbs/17_roberta_conditional_prob.ipynb
+++ b/nbs/17_roberta_conditional_prob.ipynb
@@ -183,7 +183,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/quan/anaconda3/envs/nlp_dev/lib/python3.10/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "_tokenizer = RobertaTokenizer.from_pretrained('roberta-base')"
    ]
@@ -568,6 +577,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/quan/anaconda3/envs/nlp_dev/lib/python3.10/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n",
       "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-base and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
@@ -643,7 +654,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='849' max='849' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [849/849 02:27, Epoch 3/3]\n",
+       "      [849/849 05:25, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -661,29 +672,29 @@
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>No log</td>\n",
-       "      <td>0.108839</td>\n",
-       "      <td>0.420471</td>\n",
-       "      <td>0.614450</td>\n",
-       "      <td>0.664792</td>\n",
-       "      <td>0.870747</td>\n",
+       "      <td>0.109697</td>\n",
+       "      <td>0.419514</td>\n",
+       "      <td>0.615113</td>\n",
+       "      <td>0.650357</td>\n",
+       "      <td>0.868979</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.141100</td>\n",
-       "      <td>0.099012</td>\n",
-       "      <td>0.442727</td>\n",
-       "      <td>0.612461</td>\n",
-       "      <td>0.676153</td>\n",
-       "      <td>0.874724</td>\n",
+       "      <td>0.141400</td>\n",
+       "      <td>0.096176</td>\n",
+       "      <td>0.451226</td>\n",
+       "      <td>0.613566</td>\n",
+       "      <td>0.682490</td>\n",
+       "      <td>0.881131</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.141100</td>\n",
-       "      <td>0.094000</td>\n",
-       "      <td>0.474604</td>\n",
-       "      <td>0.601193</td>\n",
-       "      <td>0.678115</td>\n",
-       "      <td>0.878922</td>\n",
+       "      <td>0.141400</td>\n",
+       "      <td>0.094754</td>\n",
+       "      <td>0.447835</td>\n",
+       "      <td>0.614229</td>\n",
+       "      <td>0.682274</td>\n",
+       "      <td>0.883120</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -868,9 +879,9 @@
        "      <td>[0, 4, 215, 10, 1531, 8443, 27785, 372, 7, 356...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>General</td>\n",
-       "      <td>0.607491</td>\n",
+       "      <td>0.591014</td>\n",
        "      <td>Jackets</td>\n",
-       "      <td>0.897998</td>\n",
+       "      <td>0.898804</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -881,10 +892,10 @@
        "      <td>[1, 4]</td>\n",
        "      <td>[0, 41918, 8, 14878, 479, 939, 802, 42, 6399, ...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
-       "      <td>General Petite</td>\n",
-       "      <td>0.507972</td>\n",
+       "      <td>General</td>\n",
+       "      <td>0.533907</td>\n",
        "      <td>Tops</td>\n",
-       "      <td>0.999635</td>\n",
+       "      <td>0.999752</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -896,9 +907,9 @@
        "      <td>[0, 4903, 1001, 8, 1256, 479, 42, 299, 34, 10,...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>General</td>\n",
-       "      <td>0.515406</td>\n",
+       "      <td>0.564118</td>\n",
        "      <td>Tops</td>\n",
-       "      <td>0.999644</td>\n",
+       "      <td>0.999757</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -910,9 +921,9 @@
        "      <td>[0, 18581, 2089, 1589, 1136, 3568, 479, 939, 7...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>General</td>\n",
-       "      <td>0.522763</td>\n",
+       "      <td>0.520808</td>\n",
        "      <td>Dresses</td>\n",
-       "      <td>0.999312</td>\n",
+       "      <td>0.999089</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -924,9 +935,9 @@
        "      <td>[0, 20473, 4682, 9215, 479, 42, 16, 127, 92, 2...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>General</td>\n",
-       "      <td>0.566604</td>\n",
+       "      <td>0.559546</td>\n",
        "      <td>Dresses</td>\n",
-       "      <td>0.998707</td>\n",
+       "      <td>0.999006</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -956,17 +967,17 @@
        "\n",
        "                                      attention_mask pred_Division Name  \\\n",
        "0  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...            General   \n",
-       "1  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...     General Petite   \n",
+       "1  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...            General   \n",
        "2  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...            General   \n",
        "3  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...            General   \n",
        "4  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...            General   \n",
        "\n",
        "   pred_prob_Division Name pred_Department Name  pred_prob_Department Name  \n",
-       "0                 0.607491              Jackets                   0.897998  \n",
-       "1                 0.507972                 Tops                   0.999635  \n",
-       "2                 0.515406                 Tops                   0.999644  \n",
-       "3                 0.522763              Dresses                   0.999312  \n",
-       "4                 0.566604              Dresses                   0.998707  "
+       "0                 0.591014              Jackets                   0.898804  \n",
+       "1                 0.533907                 Tops                   0.999752  \n",
+       "2                 0.564118                 Tops                   0.999757  \n",
+       "3                 0.520808              Dresses                   0.999089  \n",
+       "4                 0.559546              Dresses                   0.999006  "
       ]
      },
      "execution_count": null,
@@ -994,7 +1005,7 @@
     {
      "data": {
       "text/plain": [
-       "0.4747692458938014"
+       "0.4479421567807432"
       ]
      },
      "execution_count": null,
@@ -1015,7 +1026,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6778981955185958"
+       "0.6822742871946978"
       ]
      },
      "execution_count": null,
@@ -1139,10 +1150,10 @@
        "      <td>perfect for work and play . this shirt works f...</td>\n",
        "      <td>[0, 20473, 13, 173, 8, 310, 479, 42, 6399, 136...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
-       "      <td>General Petite</td>\n",
-       "      <td>0.470932</td>\n",
+       "      <td>General</td>\n",
+       "      <td>0.549556</td>\n",
        "      <td>Tops</td>\n",
-       "      <td>0.999444</td>\n",
+       "      <td>0.999717</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1151,9 +1162,9 @@
        "      <td>[0, 4, 939, 218, 75, 216, 596, 939, 56, 5, 548...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>General</td>\n",
-       "      <td>0.618383</td>\n",
+       "      <td>0.668210</td>\n",
        "      <td>Bottoms</td>\n",
-       "      <td>0.999551</td>\n",
+       "      <td>0.999585</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1162,9 +1173,9 @@
        "      <td>[0, 12338, 9304, 479, 5, 29, 364, 37687, 32, 3...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>General</td>\n",
-       "      <td>0.619160</td>\n",
+       "      <td>0.629028</td>\n",
        "      <td>Bottoms</td>\n",
-       "      <td>0.997819</td>\n",
+       "      <td>0.999531</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1172,10 +1183,10 @@
        "      <td>surprisingly comfy for a button down . i am a ...</td>\n",
        "      <td>[0, 33258, 3137, 24382, 13, 10, 6148, 159, 479...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
-       "      <td>General Petite</td>\n",
-       "      <td>0.480667</td>\n",
+       "      <td>General</td>\n",
+       "      <td>0.530994</td>\n",
        "      <td>Tops</td>\n",
-       "      <td>0.999283</td>\n",
+       "      <td>0.996693</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1184,9 +1195,9 @@
        "      <td>[0, 20263, 8, 650, 479, 5, 6399, 16, 2260, 10,...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>General</td>\n",
-       "      <td>0.455888</td>\n",
+       "      <td>0.499403</td>\n",
        "      <td>Tops</td>\n",
-       "      <td>0.990520</td>\n",
+       "      <td>0.997771</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1215,18 +1226,18 @@
        "4  [0, 20263, 8, 650, 479, 5, 6399, 16, 2260, 10,...   \n",
        "\n",
        "                                      attention_mask pred_Division Name  \\\n",
-       "0  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...     General Petite   \n",
+       "0  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...            General   \n",
        "1  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...            General   \n",
        "2  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...            General   \n",
-       "3  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...     General Petite   \n",
+       "3  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...            General   \n",
        "4  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...            General   \n",
        "\n",
        "   pred_prob_Division Name pred_Department Name  pred_prob_Department Name  \n",
-       "0                 0.470932                 Tops                   0.999444  \n",
-       "1                 0.618383              Bottoms                   0.999551  \n",
-       "2                 0.619160              Bottoms                   0.997819  \n",
-       "3                 0.480667                 Tops                   0.999283  \n",
-       "4                 0.455888                 Tops                   0.990520  "
+       "0                 0.549556                 Tops                   0.999717  \n",
+       "1                 0.668210              Bottoms                   0.999585  \n",
+       "2                 0.629028              Bottoms                   0.999531  \n",
+       "3                 0.530994                 Tops                   0.996693  \n",
+       "4                 0.499403                 Tops                   0.997771  "
       ]
      },
      "execution_count": null,
@@ -1253,7 +1264,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7042728059888983"
+       "0.7058640842784157"
       ]
      },
      "execution_count": null,
@@ -1343,10 +1354,10 @@
        "      <td>perfect for work and play . this shirt works f...</td>\n",
        "      <td>[0, 20473, 13, 173, 8, 310, 479, 42, 6399, 136...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
-       "      <td>[General Petite, General, Initmates]</td>\n",
-       "      <td>[0.47093222, 0.467542, 0.06152584]</td>\n",
+       "      <td>[General, General Petite, Initmates]</td>\n",
+       "      <td>[0.5495558, 0.38857713, 0.061867107]</td>\n",
        "      <td>[Tops, Intimate, Trend]</td>\n",
-       "      <td>[0.99944407, 0.0005385863, 5.9110685e-06]</td>\n",
+       "      <td>[0.9997173, 0.00027123763, 5.448324e-06]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1355,9 +1366,9 @@
        "      <td>[0, 4, 939, 218, 75, 216, 596, 939, 56, 5, 548...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, General Petite, Initmates]</td>\n",
-       "      <td>[0.6183828, 0.28837556, 0.09324159]</td>\n",
+       "      <td>[0.6682097, 0.26135367, 0.0704367]</td>\n",
        "      <td>[Bottoms, Intimate, Trend]</td>\n",
-       "      <td>[0.9995515, 0.00033127703, 8.8143584e-05]</td>\n",
+       "      <td>[0.99958473, 0.00031657313, 6.8090965e-05]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1366,9 +1377,9 @@
        "      <td>[0, 12338, 9304, 479, 5, 29, 364, 37687, 32, 3...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, General Petite, Initmates]</td>\n",
-       "      <td>[0.6191595, 0.26786247, 0.11297803]</td>\n",
+       "      <td>[0.62902796, 0.29412356, 0.07684846]</td>\n",
        "      <td>[Bottoms, Intimate, Trend]</td>\n",
-       "      <td>[0.9978188, 0.0021041941, 5.1036062e-05]</td>\n",
+       "      <td>[0.9995307, 0.00037790896, 5.9614045e-05]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1376,10 +1387,10 @@
        "      <td>surprisingly comfy for a button down . i am a ...</td>\n",
        "      <td>[0, 33258, 3137, 24382, 13, 10, 6148, 159, 479...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
-       "      <td>[General Petite, General, Initmates]</td>\n",
-       "      <td>[0.48066714, 0.4660372, 0.0532956]</td>\n",
-       "      <td>[Tops, Intimate, Trend]</td>\n",
-       "      <td>[0.9992835, 0.0006938859, 8.196627e-06]</td>\n",
+       "      <td>[General, General Petite, Initmates]</td>\n",
+       "      <td>[0.530994, 0.384637, 0.084368974]</td>\n",
+       "      <td>[Tops, Intimate, Dresses]</td>\n",
+       "      <td>[0.99669266, 0.003254413, 2.1810652e-05]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1388,9 +1399,9 @@
        "      <td>[0, 20263, 8, 650, 479, 5, 6399, 16, 2260, 10,...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, General Petite, Initmates]</td>\n",
-       "      <td>[0.4558881, 0.4027955, 0.1413164]</td>\n",
+       "      <td>[0.49940288, 0.3735293, 0.12706791]</td>\n",
        "      <td>[Tops, Intimate, Trend]</td>\n",
-       "      <td>[0.9905195, 0.009434645, 1.8543737e-05]</td>\n",
+       "      <td>[0.9977709, 0.0022051241, 1.0216948e-05]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1425,19 +1436,19 @@
        "3  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...   \n",
        "4  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...   \n",
        "\n",
-       "                     pred_Division Name              pred_prob_Division Name  \\\n",
-       "0  [General Petite, General, Initmates]   [0.47093222, 0.467542, 0.06152584]   \n",
-       "1  [General, General Petite, Initmates]  [0.6183828, 0.28837556, 0.09324159]   \n",
-       "2  [General, General Petite, Initmates]  [0.6191595, 0.26786247, 0.11297803]   \n",
-       "3  [General Petite, General, Initmates]   [0.48066714, 0.4660372, 0.0532956]   \n",
-       "4  [General, General Petite, Initmates]    [0.4558881, 0.4027955, 0.1413164]   \n",
+       "                     pred_Division Name               pred_prob_Division Name  \\\n",
+       "0  [General, General Petite, Initmates]  [0.5495558, 0.38857713, 0.061867107]   \n",
+       "1  [General, General Petite, Initmates]    [0.6682097, 0.26135367, 0.0704367]   \n",
+       "2  [General, General Petite, Initmates]  [0.62902796, 0.29412356, 0.07684846]   \n",
+       "3  [General, General Petite, Initmates]     [0.530994, 0.384637, 0.084368974]   \n",
+       "4  [General, General Petite, Initmates]   [0.49940288, 0.3735293, 0.12706791]   \n",
        "\n",
-       "         pred_Department Name                  pred_prob_Department Name  \n",
-       "0     [Tops, Intimate, Trend]  [0.99944407, 0.0005385863, 5.9110685e-06]  \n",
-       "1  [Bottoms, Intimate, Trend]  [0.9995515, 0.00033127703, 8.8143584e-05]  \n",
-       "2  [Bottoms, Intimate, Trend]   [0.9978188, 0.0021041941, 5.1036062e-05]  \n",
-       "3     [Tops, Intimate, Trend]    [0.9992835, 0.0006938859, 8.196627e-06]  \n",
-       "4     [Tops, Intimate, Trend]    [0.9905195, 0.009434645, 1.8543737e-05]  "
+       "         pred_Department Name                   pred_prob_Department Name  \n",
+       "0     [Tops, Intimate, Trend]    [0.9997173, 0.00027123763, 5.448324e-06]  \n",
+       "1  [Bottoms, Intimate, Trend]  [0.99958473, 0.00031657313, 6.8090965e-05]  \n",
+       "2  [Bottoms, Intimate, Trend]   [0.9995307, 0.00037790896, 5.9614045e-05]  \n",
+       "3   [Tops, Intimate, Dresses]    [0.99669266, 0.003254413, 2.1810652e-05]  \n",
+       "4     [Tops, Intimate, Trend]    [0.9977709, 0.0022051241, 1.0216948e-05]  "
       ]
      },
      "execution_count": null,
@@ -1520,14 +1531,14 @@
        "   27785,\n",
        "   2]],\n",
        " 'attention_mask': [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]],\n",
-       " 'pred_Division Name': [['General Petite', 'General', 'Initmates']],\n",
-       " 'pred_prob_Division Name': [[0.47133684158325195,\n",
-       "   0.4392646849155426,\n",
-       "   0.08939847350120544]],\n",
+       " 'pred_Division Name': [['General', 'General Petite', 'Initmates']],\n",
+       " 'pred_prob_Division Name': [[0.564812958240509,\n",
+       "   0.3748474419116974,\n",
+       "   0.06033959984779358]],\n",
        " 'pred_Department Name': [['Tops', 'Intimate', 'Trend']],\n",
-       " 'pred_prob_Department Name': [[0.9977006316184998,\n",
-       "   0.002275488106533885,\n",
-       "   8.360888386960141e-06]]}"
+       " 'pred_prob_Department Name': [[0.9997146725654602,\n",
+       "   0.00027399769169278443,\n",
+       "   5.55193309992319e-06]]}"
       ]
      },
      "execution_count": null,
