--- a/nbs/19_roberta_multilabel.ipynb
+++ b/nbs/19_roberta_multilabel.ipynb
@@ -359,7 +359,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/quan/anaconda3/envs/nlp_dev/lib/python3.10/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "_tokenizer = RobertaTokenizer.from_pretrained('roberta-base')"
    ]
@@ -489,7 +498,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-base and are newly initialized: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
+      "/home/quan/anaconda3/envs/nlp_dev/lib/python3.10/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n",
+      "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-base and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
@@ -577,7 +588,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='849' max='849' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [849/849 02:31, Epoch 3/3]\n",
+       "      [849/849 06:44, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -593,23 +604,23 @@
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>No log</td>\n",
-       "      <td>0.246810</td>\n",
-       "      <td>0.529303</td>\n",
-       "      <td>0.376712</td>\n",
+       "      <td>0.242643</td>\n",
+       "      <td>0.574833</td>\n",
+       "      <td>0.402121</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.268400</td>\n",
-       "      <td>0.228566</td>\n",
-       "      <td>0.601095</td>\n",
-       "      <td>0.497791</td>\n",
+       "      <td>0.268500</td>\n",
+       "      <td>0.230503</td>\n",
+       "      <td>0.594430</td>\n",
+       "      <td>0.509280</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.268400</td>\n",
-       "      <td>0.229782</td>\n",
-       "      <td>0.607130</td>\n",
-       "      <td>0.513036</td>\n",
+       "      <td>0.268500</td>\n",
+       "      <td>0.230640</td>\n",
+       "      <td>0.598910</td>\n",
+       "      <td>0.518118</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -694,7 +705,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at sample_weights/my_model were not used when initializing RobertaHiddenStateConcatForSequenceClassification: ['body_model.pooler.dense.weight', 'body_model.pooler.dense.bias']\n",
+      "Some weights of the model checkpoint at sample_weights/my_model were not used when initializing RobertaHiddenStateConcatForSequenceClassification: ['body_model.pooler.dense.bias', 'body_model.pooler.dense.weight']\n",
       "- This IS expected if you are initializing RobertaHiddenStateConcatForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing RobertaHiddenStateConcatForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -788,7 +799,7 @@
        "      <td>[0, 4, 215, 10, 1531, 8443, 27785, 372, 7, 356...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, Jackets]</td>\n",
-       "      <td>[0.00084586383, 0.0008228649, 0.53077996, 0.40...</td>\n",
+       "      <td>[0.0016225622, 0.0026141205, 0.52690035, 0.390...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -799,7 +810,7 @@
        "      <td>[0, 41918, 8, 14878, 479, 939, 802, 42, 6399, ...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, Tops]</td>\n",
-       "      <td>[0.00076115684, 0.0011494813, 0.63350743, 0.35...</td>\n",
+       "      <td>[0.00071811187, 0.0011346012, 0.63563234, 0.36...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -810,7 +821,7 @@
        "      <td>[0, 4903, 1001, 8, 1256, 479, 42, 299, 34, 10,...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, Tops]</td>\n",
-       "      <td>[0.0006471503, 0.00071838085, 0.63989604, 0.35...</td>\n",
+       "      <td>[0.0008183706, 0.00083204935, 0.6578452, 0.357...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -821,7 +832,7 @@
        "      <td>[0, 18581, 2089, 1589, 1136, 3568, 479, 939, 7...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[Dresses, General]</td>\n",
-       "      <td>[0.0016815739, 0.9821854, 0.5720324, 0.4338739...</td>\n",
+       "      <td>[0.001032995, 0.97645515, 0.55536234, 0.428432...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -831,8 +842,8 @@
        "      <td>[0, 1, 0, 1, 0, 0, 0, 0, 0]</td>\n",
        "      <td>[0, 20473, 4682, 9215, 479, 42, 16, 127, 92, 2...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
-       "      <td>[Dresses]</td>\n",
-       "      <td>[0.0015062174, 0.97108096, 0.495135, 0.4857396...</td>\n",
+       "      <td>[Dresses, General]</td>\n",
+       "      <td>[0.00093759556, 0.9759572, 0.54164094, 0.42817...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -865,14 +876,14 @@
        "1  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...     [General, Tops]   \n",
        "2  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...     [General, Tops]   \n",
        "3  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...  [Dresses, General]   \n",
-       "4  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...           [Dresses]   \n",
+       "4  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...  [Dresses, General]   \n",
        "\n",
        "                               pred_prob_Multi_Label  \n",
-       "0  [0.00084586383, 0.0008228649, 0.53077996, 0.40...  \n",
-       "1  [0.00076115684, 0.0011494813, 0.63350743, 0.35...  \n",
-       "2  [0.0006471503, 0.00071838085, 0.63989604, 0.35...  \n",
-       "3  [0.0016815739, 0.9821854, 0.5720324, 0.4338739...  \n",
-       "4  [0.0015062174, 0.97108096, 0.495135, 0.4857396...  "
+       "0  [0.0016225622, 0.0026141205, 0.52690035, 0.390...  \n",
+       "1  [0.00071811187, 0.0011346012, 0.63563234, 0.36...  \n",
+       "2  [0.0008183706, 0.00083204935, 0.6578452, 0.357...  \n",
+       "3  [0.001032995, 0.97645515, 0.55536234, 0.428432...  \n",
+       "4  [0.00093759556, 0.9759572, 0.54164094, 0.42817...  "
       ]
      },
      "execution_count": null,
@@ -959,7 +970,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6070039010211565"
+       "0.5989434710627796"
       ]
      },
      "execution_count": null,
@@ -1074,7 +1085,7 @@
        "      <td>[0, 20473, 13, 173, 8, 310, 479, 42, 6399, 136...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, Tops]</td>\n",
-       "      <td>[0.0007480946, 0.000938953, 0.62981313, 0.3732...</td>\n",
+       "      <td>[0.0008787949, 0.0011617275, 0.6554981, 0.3466...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1083,7 +1094,7 @@
        "      <td>[0, 4, 939, 218, 75, 216, 596, 939, 56, 5, 548...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[Bottoms, General]</td>\n",
-       "      <td>[0.98482, 0.002308704, 0.7073043, 0.31208462, ...</td>\n",
+       "      <td>[0.981327, 0.0017199836, 0.72738814, 0.2887234...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1092,7 +1103,7 @@
        "      <td>[0, 12338, 9304, 479, 5, 29, 364, 37687, 32, 3...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[Bottoms, General]</td>\n",
-       "      <td>[0.982895, 0.0011552101, 0.69011426, 0.3300466...</td>\n",
+       "      <td>[0.98825514, 0.0013365657, 0.72356224, 0.28617...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1101,7 +1112,7 @@
        "      <td>[0, 33258, 3137, 24382, 13, 10, 6148, 159, 479...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, Tops]</td>\n",
-       "      <td>[0.0005297281, 0.0011721244, 0.60199547, 0.335...</td>\n",
+       "      <td>[0.00110166, 0.0023981999, 0.6438682, 0.361307...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1110,7 +1121,7 @@
        "      <td>[0, 20263, 8, 650, 479, 5, 6399, 16, 2260, 10,...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, Tops]</td>\n",
-       "      <td>[0.00033784943, 0.0006036041, 0.60923135, 0.35...</td>\n",
+       "      <td>[0.00052336225, 0.0006901586, 0.5660622, 0.351...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1146,11 +1157,11 @@
        "4  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...     [General, Tops]   \n",
        "\n",
        "                               pred_prob_Multi_Label  \n",
-       "0  [0.0007480946, 0.000938953, 0.62981313, 0.3732...  \n",
-       "1  [0.98482, 0.002308704, 0.7073043, 0.31208462, ...  \n",
-       "2  [0.982895, 0.0011552101, 0.69011426, 0.3300466...  \n",
-       "3  [0.0005297281, 0.0011721244, 0.60199547, 0.335...  \n",
-       "4  [0.00033784943, 0.0006036041, 0.60923135, 0.35...  "
+       "0  [0.0008787949, 0.0011617275, 0.6554981, 0.3466...  \n",
+       "1  [0.981327, 0.0017199836, 0.72738814, 0.2887234...  \n",
+       "2  [0.98825514, 0.0013365657, 0.72356224, 0.28617...  \n",
+       "3  [0.00110166, 0.0023981999, 0.6438682, 0.361307...  \n",
+       "4  [0.00052336225, 0.0006901586, 0.5660622, 0.351...  "
       ]
      },
      "execution_count": null,
@@ -1232,15 +1243,15 @@
        "   2]],\n",
        " 'attention_mask': [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]],\n",
        " 'pred_Multi_Label': [['General', 'Tops']],\n",
-       " 'pred_prob_Multi_Label': [[0.0006734096677973866,\n",
-       "   0.0005823888350278139,\n",
-       "   0.6259031295776367,\n",
-       "   0.36289992928504944,\n",
-       "   0.008715132251381874,\n",
-       "   0.00930961687117815,\n",
-       "   0.0008805147372186184,\n",
-       "   0.9902357459068298,\n",
-       "   0.0016849226085469127]]}"
+       " 'pred_prob_Multi_Label': [[0.0008708593086339533,\n",
+       "   0.0008345667738467455,\n",
+       "   0.63884437084198,\n",
+       "   0.36591553688049316,\n",
+       "   0.011160656809806824,\n",
+       "   0.012419871985912323,\n",
+       "   0.0008258746238425374,\n",
+       "   0.9864105582237244,\n",
+       "   0.002458298346027732]]}"
       ]
      },
      "execution_count": null,
