--- a/nbs/21_roberta_multihead.ipynb
+++ b/nbs/21_roberta_multihead.ipynb
@@ -183,7 +183,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/quan/anaconda3/envs/nlp_dev/lib/python3.10/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "_tokenizer = RobertaTokenizer.from_pretrained('roberta-base')"
    ]
@@ -297,6 +306,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/quan/anaconda3/envs/nlp_dev/lib/python3.10/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n",
       "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-base and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
@@ -384,7 +395,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='849' max='849' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [849/849 02:28, Epoch 3/3]\n",
+       "      [849/849 04:59, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -402,29 +413,29 @@
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>No log</td>\n",
-       "      <td>1.221690</td>\n",
-       "      <td>0.421665</td>\n",
-       "      <td>0.613787</td>\n",
-       "      <td>0.568041</td>\n",
-       "      <td>0.849536</td>\n",
+       "      <td>1.216166</td>\n",
+       "      <td>0.419407</td>\n",
+       "      <td>0.614229</td>\n",
+       "      <td>0.638160</td>\n",
+       "      <td>0.861688</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>1.350000</td>\n",
-       "      <td>1.128529</td>\n",
-       "      <td>0.455967</td>\n",
-       "      <td>0.617101</td>\n",
-       "      <td>0.684232</td>\n",
-       "      <td>0.881794</td>\n",
+       "      <td>1.351000</td>\n",
+       "      <td>1.129738</td>\n",
+       "      <td>0.450979</td>\n",
+       "      <td>0.616659</td>\n",
+       "      <td>0.688072</td>\n",
+       "      <td>0.884887</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>1.350000</td>\n",
-       "      <td>1.122523</td>\n",
-       "      <td>0.462676</td>\n",
-       "      <td>0.619753</td>\n",
-       "      <td>0.689669</td>\n",
-       "      <td>0.887539</td>\n",
+       "      <td>1.351000</td>\n",
+       "      <td>1.127698</td>\n",
+       "      <td>0.463073</td>\n",
+       "      <td>0.620636</td>\n",
+       "      <td>0.686571</td>\n",
+       "      <td>0.885329</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -607,9 +618,9 @@
        "      <td>[0, 4, 215, 10, 1531, 8443, 27785, 372, 7, 356...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>General</td>\n",
-       "      <td>0.477362</td>\n",
+       "      <td>0.557212</td>\n",
        "      <td>Jackets</td>\n",
-       "      <td>0.846564</td>\n",
+       "      <td>0.833067</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -621,9 +632,9 @@
        "      <td>[0, 41918, 8, 14878, 479, 939, 802, 42, 6399, ...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>General</td>\n",
-       "      <td>0.623721</td>\n",
+       "      <td>0.626316</td>\n",
        "      <td>Tops</td>\n",
-       "      <td>0.988782</td>\n",
+       "      <td>0.987408</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -635,9 +646,9 @@
        "      <td>[0, 4903, 1001, 8, 1256, 479, 42, 299, 34, 10,...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>General</td>\n",
-       "      <td>0.644064</td>\n",
+       "      <td>0.617450</td>\n",
        "      <td>Tops</td>\n",
-       "      <td>0.984847</td>\n",
+       "      <td>0.987884</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -649,9 +660,9 @@
        "      <td>[0, 18581, 2089, 1589, 1136, 3568, 479, 939, 7...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>General</td>\n",
-       "      <td>0.564723</td>\n",
+       "      <td>0.556868</td>\n",
        "      <td>Dresses</td>\n",
-       "      <td>0.981526</td>\n",
+       "      <td>0.982287</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -663,9 +674,9 @@
        "      <td>[0, 20473, 4682, 9215, 479, 42, 16, 127, 92, 2...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>General</td>\n",
-       "      <td>0.559092</td>\n",
+       "      <td>0.596989</td>\n",
        "      <td>Dresses</td>\n",
-       "      <td>0.980852</td>\n",
+       "      <td>0.983380</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -701,11 +712,11 @@
        "4  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...            General   \n",
        "\n",
        "   pred_prob_Division Name pred_Department Name  pred_prob_Department Name  \n",
-       "0                 0.477362              Jackets                   0.846564  \n",
-       "1                 0.623721                 Tops                   0.988782  \n",
-       "2                 0.644064                 Tops                   0.984847  \n",
-       "3                 0.564723              Dresses                   0.981526  \n",
-       "4                 0.559092              Dresses                   0.980852  "
+       "0                 0.557212              Jackets                   0.833067  \n",
+       "1                 0.626316                 Tops                   0.987408  \n",
+       "2                 0.617450                 Tops                   0.987884  \n",
+       "3                 0.556868              Dresses                   0.982287  \n",
+       "4                 0.596989              Dresses                   0.983380  "
       ]
      },
      "execution_count": null,
@@ -733,7 +744,7 @@
     {
      "data": {
       "text/plain": [
-       "0.46267594624535663"
+       "0.46307304608838856"
       ]
      },
      "execution_count": null,
@@ -753,7 +764,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6896689740562522"
+       "0.6863195959806639"
       ]
      },
      "execution_count": null,
@@ -873,9 +884,9 @@
        "      <td>[0, 20473, 13, 173, 8, 310, 479, 42, 6399, 136...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>General</td>\n",
-       "      <td>0.617510</td>\n",
+       "      <td>0.628283</td>\n",
        "      <td>Tops</td>\n",
-       "      <td>0.988731</td>\n",
+       "      <td>0.976219</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -884,9 +895,9 @@
        "      <td>[0, 4, 939, 218, 75, 216, 596, 939, 56, 5, 548...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>General</td>\n",
-       "      <td>0.721005</td>\n",
+       "      <td>0.727283</td>\n",
        "      <td>Bottoms</td>\n",
-       "      <td>0.990484</td>\n",
+       "      <td>0.992511</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -895,9 +906,9 @@
        "      <td>[0, 12338, 9304, 479, 5, 29, 364, 37687, 32, 3...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>General</td>\n",
-       "      <td>0.674921</td>\n",
+       "      <td>0.685441</td>\n",
        "      <td>Bottoms</td>\n",
-       "      <td>0.990151</td>\n",
+       "      <td>0.979834</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -906,9 +917,9 @@
        "      <td>[0, 33258, 3137, 24382, 13, 10, 6148, 159, 479...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>General</td>\n",
-       "      <td>0.635448</td>\n",
+       "      <td>0.660995</td>\n",
        "      <td>Tops</td>\n",
-       "      <td>0.984789</td>\n",
+       "      <td>0.962874</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -917,9 +928,9 @@
        "      <td>[0, 20263, 8, 650, 479, 5, 6399, 16, 2260, 10,...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>General</td>\n",
-       "      <td>0.626824</td>\n",
+       "      <td>0.604513</td>\n",
        "      <td>Tops</td>\n",
-       "      <td>0.960070</td>\n",
+       "      <td>0.943028</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -955,11 +966,11 @@
        "4  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...            General   \n",
        "\n",
        "   pred_prob_Division Name pred_Department Name  pred_prob_Department Name  \n",
-       "0                 0.617510                 Tops                   0.988731  \n",
-       "1                 0.721005              Bottoms                   0.990484  \n",
-       "2                 0.674921              Bottoms                   0.990151  \n",
-       "3                 0.635448                 Tops                   0.984789  \n",
-       "4                 0.626824                 Tops                   0.960070  "
+       "0                 0.628283                 Tops                   0.976219  \n",
+       "1                 0.727283              Bottoms                   0.992511  \n",
+       "2                 0.685441              Bottoms                   0.979834  \n",
+       "3                 0.660995                 Tops                   0.962874  \n",
+       "4                 0.604513                 Tops                   0.943028  "
       ]
      },
      "execution_count": null,
@@ -1050,9 +1061,9 @@
        "      <td>[0, 20473, 13, 173, 8, 310, 479, 42, 6399, 136...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, General Petite, Initmates]</td>\n",
-       "      <td>[0.6175101, 0.37162042, 0.010869571]</td>\n",
+       "      <td>[0.62828326, 0.3495934, 0.022123374]</td>\n",
        "      <td>[Tops, Intimate, Trend]</td>\n",
-       "      <td>[0.9887306, 0.009084422, 0.0012472523]</td>\n",
+       "      <td>[0.9762191, 0.020559784, 0.0010864006]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1061,9 +1072,9 @@
        "      <td>[0, 4, 939, 218, 75, 216, 596, 939, 56, 5, 548...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, General Petite, Initmates]</td>\n",
-       "      <td>[0.72100455, 0.27617884, 0.0028166308]</td>\n",
-       "      <td>[Bottoms, Trend, Intimate]</td>\n",
-       "      <td>[0.9904841, 0.0047654426, 0.003445241]</td>\n",
+       "      <td>[0.7272834, 0.2687256, 0.003990893]</td>\n",
+       "      <td>[Bottoms, Intimate, Trend]</td>\n",
+       "      <td>[0.9925114, 0.004263644, 0.002455687]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1072,9 +1083,9 @@
        "      <td>[0, 12338, 9304, 479, 5, 29, 364, 37687, 32, 3...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, General Petite, Initmates]</td>\n",
-       "      <td>[0.6749212, 0.3203483, 0.0047304775]</td>\n",
+       "      <td>[0.68544143, 0.30039048, 0.01416805]</td>\n",
        "      <td>[Bottoms, Intimate, Trend]</td>\n",
-       "      <td>[0.99015105, 0.0058142617, 0.0032335143]</td>\n",
+       "      <td>[0.97983354, 0.018011613, 0.0015884736]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1083,9 +1094,9 @@
        "      <td>[0, 33258, 3137, 24382, 13, 10, 6148, 159, 479...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, General Petite, Initmates]</td>\n",
-       "      <td>[0.6354475, 0.35118622, 0.013366258]</td>\n",
-       "      <td>[Tops, Intimate, Trend]</td>\n",
-       "      <td>[0.98478913, 0.012501516, 0.0012945511]</td>\n",
+       "      <td>[0.66099477, 0.3112359, 0.027769288]</td>\n",
+       "      <td>[Tops, Intimate, Dresses]</td>\n",
+       "      <td>[0.9628739, 0.032319617, 0.0018878386]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1094,9 +1105,9 @@
        "      <td>[0, 20263, 8, 650, 479, 5, 6399, 16, 2260, 10,...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, General Petite, Initmates]</td>\n",
-       "      <td>[0.6268242, 0.33514223, 0.03803355]</td>\n",
+       "      <td>[0.6045134, 0.33937424, 0.056112316]</td>\n",
        "      <td>[Tops, Intimate, Trend]</td>\n",
-       "      <td>[0.9600704, 0.037362028, 0.0013505084]</td>\n",
+       "      <td>[0.94302803, 0.05410044, 0.001068312]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1131,26 +1142,19 @@
        "3  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...   \n",
        "4  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...   \n",
        "\n",
-       "                     pred_Division Name  \\\n",
-       "0  [General, General Petite, Initmates]   \n",
-       "1  [General, General Petite, Initmates]   \n",
-       "2  [General, General Petite, Initmates]   \n",
-       "3  [General, General Petite, Initmates]   \n",
-       "4  [General, General Petite, Initmates]   \n",
+       "                     pred_Division Name               pred_prob_Division Name  \\\n",
+       "0  [General, General Petite, Initmates]  [0.62828326, 0.3495934, 0.022123374]   \n",
+       "1  [General, General Petite, Initmates]   [0.7272834, 0.2687256, 0.003990893]   \n",
+       "2  [General, General Petite, Initmates]  [0.68544143, 0.30039048, 0.01416805]   \n",
+       "3  [General, General Petite, Initmates]  [0.66099477, 0.3112359, 0.027769288]   \n",
+       "4  [General, General Petite, Initmates]  [0.6045134, 0.33937424, 0.056112316]   \n",
        "\n",
-       "                  pred_prob_Division Name        pred_Department Name  \\\n",
-       "0    [0.6175101, 0.37162042, 0.010869571]     [Tops, Intimate, Trend]   \n",
-       "1  [0.72100455, 0.27617884, 0.0028166308]  [Bottoms, Trend, Intimate]   \n",
-       "2    [0.6749212, 0.3203483, 0.0047304775]  [Bottoms, Intimate, Trend]   \n",
-       "3    [0.6354475, 0.35118622, 0.013366258]     [Tops, Intimate, Trend]   \n",
-       "4     [0.6268242, 0.33514223, 0.03803355]     [Tops, Intimate, Trend]   \n",
-       "\n",
-       "                  pred_prob_Department Name  \n",
-       "0    [0.9887306, 0.009084422, 0.0012472523]  \n",
-       "1    [0.9904841, 0.0047654426, 0.003445241]  \n",
-       "2  [0.99015105, 0.0058142617, 0.0032335143]  \n",
-       "3   [0.98478913, 0.012501516, 0.0012945511]  \n",
-       "4    [0.9600704, 0.037362028, 0.0013505084]  "
+       "         pred_Department Name                pred_prob_Department Name  \n",
+       "0     [Tops, Intimate, Trend]   [0.9762191, 0.020559784, 0.0010864006]  \n",
+       "1  [Bottoms, Intimate, Trend]    [0.9925114, 0.004263644, 0.002455687]  \n",
+       "2  [Bottoms, Intimate, Trend]  [0.97983354, 0.018011613, 0.0015884736]  \n",
+       "3   [Tops, Intimate, Dresses]   [0.9628739, 0.032319617, 0.0018878386]  \n",
+       "4     [Tops, Intimate, Trend]    [0.94302803, 0.05410044, 0.001068312]  "
       ]
      },
      "execution_count": null,
@@ -1225,13 +1229,13 @@
        "   2]],\n",
        " 'attention_mask': [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]],\n",
        " 'pred_Division Name': [['General', 'General Petite', 'Initmates']],\n",
-       " 'pred_prob_Division Name': [[0.6454465985298157,\n",
-       "   0.3392908275127411,\n",
-       "   0.015262508764863014]],\n",
+       " 'pred_prob_Division Name': [[0.6413698196411133,\n",
+       "   0.34388816356658936,\n",
+       "   0.014742041006684303]],\n",
        " 'pred_Department Name': [['Tops', 'Intimate', 'Trend']],\n",
-       " 'pred_prob_Department Name': [[0.9843292236328125,\n",
-       "   0.013527442701160908,\n",
-       "   0.0011262084590271115]]}"
+       " 'pred_prob_Department Name': [[0.9790199398994446,\n",
+       "   0.018422359600663185,\n",
+       "   0.0012304459232836962]]}"
       ]
      },
      "execution_count": null,
