--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -166,7 +166,7 @@
     "\n",
     "This library also a **streamed version of Text Controller** (`TextDataControllerStreaming`), allowing you to work with data without having it entirely on your hard drive. You can still perform all the processings in the non-streamed version, except for **Train/Validation split** (which means you have to define your validation set beforehand), and **Upsampling**. \n",
     "\n",
-    "For more details on **streaming**, visit [here](https://anhquan0412.github.io/that-nlp-library/text_main_streaming.html). \n",
+    "For more details on **streaming**, visit [how to create a streamed dataset](https://anhquan0412.github.io/that-nlp-library/text_main_streaming.html) and [how to train a model with a streamed dataset](https://anhquan0412.github.io/that-nlp-library/roberta_singlehead_for_streaming)\n",
     "\n",
     "If you are curious on the time and space efficiency between streamed and non-streamed version, visit the benchmark [here](https://anhquan0412.github.io/that-nlp-library/text_main_benchmark.html)\n"
    ]
